@startuml
!theme plain
skinparam class {
    BackgroundColor<<Interface>> #A9DCDF
    BackgroundColor<<Class>> #D5E8D4
    BackgroundColor<<Exception>> #FF9999
}

package sensores #FFCC99 {
    interface Sensoreavel <<Interface>> {
        + acionarSensores()
    }

    class Sensor {
        - raio: double
        + monitorar()
    }

    class SensorProximidade {
        + monitorar()
    }

    class SensorUmidade {
        + monitorar()
    }

    class NaoSensoriavelException <<Exception>> {}
}

' External references
class "Robo" as Robo #DAF7A6
interface "Entidade" as Entidade #D4C2FC
class "RoboDesligadoException" as RoboDesligadoException #DAF7A6

' Relationships
SensorProximidade --|> Sensor
SensorUmidade --|> Sensor
Sensoreavel <|.. RoboAtirador: implemented by
Sensor --> Robo: association
SensorProximidade ..> Entidade: uses
@enduml